<resources>
    <string name="app_name">MyDocs</string>
    <string name="login">Login:</string>
    <string name="my_docs">My docs</string>
    <string name="password">Password:</string>
    <string name="new_password">New password:</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome,</string>
    <string name="go_guest_mode">Continue as a guest</string>
    <string name="go_back">Log out</string>
    <string name="error_not_all_fields_filled">Not all fields are filled in!</string>
    <string name="error_passwords_are_not_same">Passwords are not same!</string>
    <string name="error_user_doesnt_exists">User with this email doesn\'t exists!</string>
    <string name="extra_guest">quest</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="cancel">Cancel</string>
    <string name="error_adding_error">Adding error!</string>
    <string name="result_successful_user_adding">New user was successfully added</string>
    <string name="error_dont_match_passwords">Passwords don\'t match!</string>
    <string name="passport">Passport</string>
    <string name="inn">INN</string>
    <string name="policy">Policy</string>
    <string name="series_and_number">Series and number</string>
    <string name="division_code">Division code</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="issued_by_whom">Issued by whom</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="place_of_residence">Place of residence</string>
    <string name="female_string">F</string>
    <string name="date_pattern">__-__-____ y.</string>
    <string name="create_a_folder">Create</string>
    <string name="rename_an_item">Rename</string>
    <string name="cancel_btn">Cancel</string>
    <string name="pin_string">Pin</string>
    <string name="hide_string">Hide</string>
    <string name="delete_string">Delete</string>
    <string name="document_string">Document</string>
    <string name="image_string">Image</string>
    <string name="card_string">Card</string>
    <string name="folder">Folder</string>
    <string name="selected_string">Selected:</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="sort_by_string">Sort by</string>
    <string name="load_image">Load image</string>
    <string name="passport_first_photo_usage">Use first photo as item image</string>
    <string name="save_as">Save as</string>
    <string name="change_photo">Change photo</string>
    <string name="error_email_in_use">Email is already in use!</string>
    <string name="fake_line">fake line</string>
    <string name="card_number">Card number</string>
    <string name="full_name">Full Name</string>
    <string name="valid_until">Valid until</string>
    <string name="cvv">CVV</string>
    <string name="card">Card</string>
    <string name="change_account">Change account</string>
    <string name="account_settings">Account settings</string>
    <string name="syncing">Syncing</string>
    <string name="hidden_files">Hidden files</string>
    <string name="my_templates">My templates</string>
    <string name="premium">Premium</string>
    <string name="settings">Settings</string>
    <string name="error_input_password">Enter the password!</string>
    <string name="save_changes">Save changes?</string>
    <string name="do_you_want_save">Do you want to save changes?</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="text_copied">Text copied to clipboard</string>
    <string name="crop">Crop</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="safety">Safety</string>
    <string name="help">Help</string>
    <string name="about_the_app">About the app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="unpin_string">Unpin</string>
    <string name="return_string">Return</string>
    <string name="avaible_templates">Avaible templates</string>
    <string name="search">Search</string>
    <string name="templates">Templates</string>
    <string name="publish">Publish</string>
    <string name="guest_mode">Guest mode</string>
    <string name="text_field">Text field</string>
    <string name="number_text_field">Number field</string>
    <string name="photo">Photo</string>
    <string name="checkbox">Checkbox</string>
    <string name="template">Template</string>
    <string name="enter_object_name">Enter an object title</string>
    <string name="downloaded">Downloaded:</string>
    <string name="system">System:</string>
    <string name="create_document">Create document</string>
    <string name="download">Download</string>
    <string name="email">Email:</string>
    <string name="login_ref">login</string>
    <string name="download_from_the_server">Download from the server</string>
    <string name="upload_to_the_server">Upload to the server</string>
    <string name="select_language">Select a language</string>
    <string name="help_dialog_text">"You can read the user manual at the link "</string>
    <string name="privacy_policy_dialog_text">Rrivacy policy is not avaible yet</string>
    <string name="pin_code_created">PIN code created</string>
    <string name="pin_code_short">PIN code is too short</string>
    <string name="password_short">Password is too short</string>
    <string name="pin_code_is_not_correct">PIN code is not correct</string>
    <string name="pin_code_deleted">PIN code deleted</string>
    <string name="long_about_text">empty</string>
    <string name="pdf_document_created">Pdf document was saved to Downloads</string>
    <string name="album">Album</string>
    <string name="old_password">Old password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="loading">"Loading: "</string>
    <string name="invalid_date">Invalid date</string>
    <string name="registration_date">Registration date</string>
    <string name="number">Number</string>
    <string name="snils">SNILS</string>
    <string name="error_user_password">Incorrect password</string>
    <string name="error_login_short">Login is too short</string>
    <string name="set_pincode_first">Set PIN-code in settings first</string>
    <string name="image_saved">Image saved</string>
</resources>