<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/makeFolderPanel"
        android:visibility="visible">
        <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/folderNameTxt"
            android:inputType="textCapWords"
            android:hint="@string/enter_a_name"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/make_rename_item_btn"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:background="@drawable/rounded_border_yellow"
            android:paddingStart="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/create_a_folder"/>
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_border_white"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/cancel_btn"/>
    </LinearLayout>