<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="#2C2C2C"
    android:fillViewport="true"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/gradient_white_to_black_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_docs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/data_panel"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stardos_stencil_regular"
        android:text="@string/my_docs"
        android:textColor="@color/white"
        android:textSize="34dp"
        android:translationX="-30dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_icon"
        app:layout_constraintTop_toTopOf="@+id/main_icon" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/data_panel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_max="310dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/main_icon">
        <TextView
            android:id="@+id/email_txt"
            android:transitionName="etxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stardos_stencil_regular"
            android:text="@string/login"
            android:textColor="#FFC700"
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/editTextLogin"
            android:transitionName="@string/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_"
            android:background="@drawable/rounded_border_white"
            android:ems="10"
            android:inputType="textFilter"
            android:textColor="#000"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/password_txt"
            android:transitionName="ptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stardos_stencil_regular"
            android:text="@string/password"
            android:textColor="#FFC700"
            android:layout_marginTop="20dp"
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border_white"
            android:ems="10"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textSize="22dp"
            android:transitionName="@string/password" />

        <TextView
            android:id="@+id/passwordConfirm_txt"
            android:alpha="1"
            android:transitionName="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stardos_stencil_regular"
            android:text="@string/confirm_password"
            android:textColor="#FFC700"
            android:layout_marginTop="20dp"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:alpha="1"
            android:transitionName="etpc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="22dp"
            android:textColor="#000"
            android:ems="10"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_"
            android:background="@drawable/rounded_border_white"
            android:inputType="textPassword" />
        <EditText
            android:transitionName="@string/fake_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:visibility="invisible"
            android:textSize="26dp"
            android:textColor="#000"
            android:ems="10"
            android:background="@drawable/rounded_border_white"
            android:inputType="textPassword" />

    </LinearLayout>
    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:textSize="20dp"
        android:onClick="signupBtnClick"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border_gray"
        android:transitionName="@string/sign_up"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_panel"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:textSize="20dp"
        android:transitionName="@string/cancel"
        android:background="@drawable/rounded_border_gray"
        android:text="@string/cancel"
        android:onClick="cancelBtnClick"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"/>

    <TextView
        android:id="@+id/without_login"
        android:transitionName="@string/go_guest_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="14"
        android:textSize="20dp"
        android:textColor="#FFC700"
        android:clickable="true"
        android:textAlignment="center"
        android:text="@string/go_guest_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>
